Added sequential timer module

--- a/base-app.gradle
+++ b/base-app.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.github.triplet.play'
 apply plugin: 'com.google.gms.oss.licenses.plugin'
 apply plugin: 'io.fabric'
+apply plugin: 'com.github.triplet.play'
 
 
 apply from: "$rootDir/release_config.gradle"
@@ -23,9 +23,7 @@ android {
 play {
 	if (file("play_store_secret.json").exists()) {
 		println "Found play store upload credentials"
-		jsonFile = file('play_store_secret.json')
+		jsonFile = file("$rootDir/play_store_secret.json")
 		track = 'internal'
 	}
 }
-
-apply plugin: 'com.google.gms.google-services'
