--- a/random-ticker-base/src/main/AndroidManifest.xml
+++ b/random-ticker-base/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.fanstaticapps.randomticker.base">
+		  package="com.fanstaticapps.randomticker">
 
 	<application
 			android:name="com.fanstaticapps.randomticker.TickerApplication"
@@ -10,6 +10,7 @@
 			android:roundIcon="@mipmap/ic_launcher_round"
 			android:supportsRtl="true"
 			android:theme="@style/AppTheme">
+
 		<activity android:name="com.fanstaticapps.randomticker.activities.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
