--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ include ':random-ticker-base'
 include ':random-ticker-app'
 include ':random-ticker-instantapp'
 include ':common'
-include ':sequential-timer-app'
+include ':sequential-timer'
