--- a/random-ticker-base/build.gradle
+++ b/random-ticker-base/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 	implementation AndroidLibs.room_rxjava2
 	implementation Libs.rxAndroid
 	implementation Libs.timber
+	implementation Libs.lottie
 
 	kapt AndroidLibs.room_compiler
 	kapt Libs.dagger_compiler
