--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 		maven { url 'https://maven.fabric.io/public' }
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:3.2.0-rc02'
+		classpath 'com.android.tools.build:gradle:3.2.1'
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
 		classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
 		classpath 'io.fabric.tools:gradle:1.25.4'
