Preferences use ringtone picker

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation AndroidLibs.appcompat
 	implementation AndroidLibs.constraint_layout
 	implementation AndroidLibs.material
+	implementation AndroidLibs.preference
 	implementation Kotlin.stdlib
 	implementation Libs.dagger
 	implementation Libs.dagger_android
@@ -34,4 +35,6 @@ dependencies {
 	implementation Firebase.crashlytics
 	implementation Gms.oss
 	implementation Libs.timber
+	implementation Libs.ultimatePicker
+
 }
