--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 		<service
 				android:name=".alarm.AlarmService"
 				android:enabled="true"
-				android:exported="true"></service>
+				android:exported="true" />
 
 		<activity android:name=".ui.main.MainActivity">
 			<intent-filter>
