--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	implementation AndroidLibs.viewmodel
 	implementation AndroidLibs.extensions
 	implementation AndroidLibs.preference
+	implementation AndroidLibs.work
 	implementation Firebase.crashlytics
 	implementation Libs.rxAndroid
 	implementation Libs.timber
