--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 		google()
 		jcenter()
 		maven { url 'https://maven.fabric.io/public' }
+		maven { url "https://plugins.gradle.org/m2/" }
 	}
 	dependencies {
 		classpath "com.android.tools.build:gradle:${Versions.androidGradle}"
