--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
 			android:theme="@style/AppTheme"
 			tools:replace="android:label">
 
+		<receivershowRunningNotification
+				android:name=".alarm.AlarmReceiver"
+				android:enabled="true"
+				android:exported="true" />
+
 		<activity android:name=".ui.main.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -77,7 +82,6 @@
 					android:value=".ui.preferences.SettingsActivity" />
 		</activity>
 		<activity android:name=".ui.CancelActivity" />
-
 	</application>
 
 </manifest>
