[Notification] show bookmark name in notification

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 			tools:replace="android:label">
 
 		<receiver
-				android:name=".alarm.AlarmReceiver"
+			android:name=".receiver.AlarmReceiver"
 				android:enabled="true"
 				android:exported="true" />
 
