[Renaming] renames ids

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /build
 /captures
 .externalNativeBuild
-.idea/caches
+/.idea/caches
 random-ticker-app/google-services.json
 play_store_secret.json
 google-services.json
