--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'io.fabric'
 apply plugin: 'com.github.triplet.play'
 apply plugin: 'com.google.android.gms.oss-licenses-plugin'
+apply plugin: 'dagger.hilt.android.plugin'
 
 apply from: "$rootDir/release_config.gradle"
 apply from: "$rootDir/versioning.gradle"
@@ -67,16 +67,11 @@ dependencies {
 	implementation Libs.lottie
 	implementation Libs.pulsator
 	implementation Libs.dagger
-	implementation Libs.dagger_android
-	implementation Libs.dagger_android_support
 	implementation Libs.ultimatePicker
 	implementation Gms.oss
 
-	implementation 'androidx.appcompat:appcompat:1.1.0'
-	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 	kapt AndroidLibs.room_compiler
 	kapt Libs.dagger_compiler
-	kapt Libs.dagger_android_processor
 
 	testImplementation TestLibs.mockito_core
 	testImplementation TestLibs.junit
@@ -98,5 +93,8 @@ play {
 	}
 }
 
-kapt { generateStubs = false }
+kapt {
+	generateStubs = false
+	correctErrorTypes true
+}
 apply plugin: 'com.google.gms.google-services'
