--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
 		<activity
 				android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
 				android:parentActivityName=".ui.preferences.SettingsActivity"
-				android:theme="@style/AppTheme.LicenseActivity" />
+				android:theme="@style/AppTheme" />
 		<activity android:name=".ui.CancelActivity" />
 	</application>
 
