--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
 	<uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+	<uses-permission android:name="android.permission.SET_ALARM" />
 
 	<application
 			android:name=".TickerApplication"
@@ -24,7 +25,7 @@
 		<receiver
 				android:name=".receiver.RepeatAlarmReceiver"
 				android:enabled="true"
-				android:exported="true"></receiver>
+				android:exported="true" />
 		<receiver
 				android:name=".receiver.AlarmReceiver"
 				android:enabled="true"
