--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,17 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
     - name: set up JDK 1.8
-      uses: actions/setup-java@v1.4.3
+      uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
     - name: Copy Google Services Json File
       uses: canastro/copy-file-action@master
       with:
         source: "google-services-for-ci.json"
         target: "app/google-services.json"
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: ./gradlew build
     - name: Run Unit Tests
       run: ./gradlew testDebugUnitTest
