--- a/.github/workflows/apk_publisher.yml
+++ b/.github/workflows/apk_publisher.yml
@@ -1,6 +1,10 @@
-name: Publish APK to PlayStore
+<name: Publish APK to PlayStore
 
-on: [workflow_dispatch]
+on:
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
@@ -13,6 +17,17 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+          prerelease: false
 
       - name: Decode google-services.json
         env:
