--- a/.github/workflows/apk_publisher.yml
+++ b/.github/workflows/apk_publisher.yml
@@ -1,10 +1,6 @@
 name: Publish APK to PlayStore
 
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+on: [ workflow_dispatch ]
 
 jobs:
   build:
