moves to intermediates

--- a/.github/workflows/apk_publisher.yml
+++ b/.github/workflows/apk_publisher.yml
@@ -45,5 +45,5 @@ jobs:
       - name: Save artifact
         uses: actions/upload-artifact@v2.2.0
         with:
-          path: ../../app/build/*/apk/release/app-release.apk
+          path: app/build/intermidiates/apk/release/app-release.apk
           if-no-files-found: ignore
