--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 	<uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 	<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 	<application
 			android:name=".TickerApplication"
@@ -77,6 +78,8 @@
 				android:parentActivityName=".ui.preferences.SettingsActivity"
 				android:theme="@style/AppTheme" />
 		<activity android:name=".ui.CancelActivity" />
+
+		<service android:name=".ui.RingtonePlayingService" />
 	</application>
 
 </manifest>
