--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
 		<activity
 				android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
 				android:parentActivityName=".ui.preferences.SettingsActivity"
-				android:theme="@style/AppTheme" />
+				android:theme="@style/AppTheme.Licenses" />
 
 		<service android:name=".ui.RingtonePlayingService" />
 	</application>
