--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:tools="http://schemas.android.com/tools"
+		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:dist="http://schemas.android.com/apk/distribution">
 
 	<dist:module dist:instant="true" />
 
 	<uses-permission android:name="android.permission.VIBRATE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+			android:maxSdkVersion="32" />
 	<uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 	<uses-permission
 			android:name="android.permission.SCHEDULE_EXACT_ALARM"
@@ -54,19 +56,18 @@
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
 
-				<data
-						android:host="randomticker-84c18.firebaseapp.com"
-						android:scheme="https" />
-				<data
-						android:host="randomticker-84c18.firebaseapp.com"
-						android:scheme="http" />
+				<data android:scheme="https"/>
+    <data android:host="randomticker-84c18.firebaseapp.com"/>
+				<data android:scheme="http"/>
+    <data android:host="randomticker-84c18.firebaseapp.com"/>
 			</intent-filter>
 		</activity>
 		<activity
 				android:name=".ui.klaxon.KlaxonActivity"
 				android:launchMode="singleTop"
 				android:showOnLockScreen="true"
-				android:turnScreenOn="true" />
+				android:turnScreenOn="true"
+				tools:targetApi="o_mr1" />
 		<activity
 				android:name=".ui.preferences.SettingsActivity"
 				android:label="@string/title_activity_settings"
