--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,11 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set up JDK 11
-        uses: actions/setup-java@v1
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-      - uses: actions/checkout@v2
+          distribution: 'temurin'
+          java-version: 17
+      - uses: actions/checkout@v3
       - name: Copy Google Services Json File
         uses: canastro/copy-file-action@master
         with:
