--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:tools="http://schemas.android.com/tools"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:dist="http://schemas.android.com/apk/distribution">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:dist="http://schemas.android.com/apk/distribution"
+		xmlns:tools="http://schemas.android.com/tools">
 
 	<dist:module dist:instant="true" />
 
-	<uses-permission android:name="android.permission.VIBRATE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-			android:maxSdkVersion="32" />
 	<uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
-	<uses-permission
-			android:name="android.permission.SCHEDULE_EXACT_ALARM"
-			android:maxSdkVersion="32" />
-	<uses-permission android:name="android.permission.USE_EXACT_ALARM" />
-	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 	<application
@@ -56,10 +49,10 @@
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
 
-				<data android:scheme="https"/>
-    <data android:host="randomticker-84c18.firebaseapp.com"/>
-				<data android:scheme="http"/>
-    <data android:host="randomticker-84c18.firebaseapp.com"/>
+				<data android:scheme="https" />
+				<data android:host="randomticker-84c18.firebaseapp.com" />
+				<data android:scheme="http" />
+				<data android:host="randomticker-84c18.firebaseapp.com" />
 			</intent-filter>
 		</activity>
 		<activity
