upgrade to kotlin 1.9.10

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Mon Jul 24 19:49:26 CEST 2023
+android.defaults.buildfeatures.buildconfig=true
 android.enableJetifier=false
 android.nonFinalResIds=false
 android.nonTransitiveRClass=false
