--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
+      - name: set up JDK 21
+        uses: actions/setup-java@v3.14.1
         with:
           distribution: 'temurin'
-          java-version: 17
-      - uses: actions/checkout@v3
+          java-version: 21
+      - uses: actions/checkou@v4.2.2
       - name: Copy Google Services Json File
         uses: canastro/copy-file-action@master
         with:
