--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set up JDK 21
-        uses: actions/setup-java@v3.14.1
+      - name: set up JDK
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 21
-      - uses: actions/checkou@v4.2.2
+      - uses: actions/checkout@v4
       - name: Copy Google Services Json File
         uses: canastro/copy-file-action@master
         with:
