--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,6 @@ koin = "4.1.0"
 coroutines = "1.10.2"
 lifecycleExtensions = "2.2.0"
 room = "2.7.2"
-lifecycle = "2.9.1"
 kotlin = "2.2.0"
 coreKtx = "1.16.0"
 
@@ -15,14 +14,13 @@ ui-viewbinding = { module = "androidx.compose.ui:ui-viewbinding" }
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 ui = { module = "androidx.compose.ui:ui" }
 material3 = { module = "androidx.compose.material3:material3" }
-material3-window-size-class1 = { module = "androidx.compose.material3:material3-window-size-class" }
+material3-window-size = { module = "androidx.compose.material3:material3-window-size-class" }
 material = { module = "com.google.android.material:material", version = "1.12.0" }
 
 activity = { module = "androidx.activity:activity-compose", version = "1.10.1" }
 appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
 
 lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "lifecycleExtensions" }
-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
