--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ material = { module = "com.google.android.material:material", version = "1.12.0"
 
 activity = { module = "androidx.activity:activity-compose", version = "1.10.1" }
 appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.37.3" }
 
 lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "lifecycleExtensions" }
 
