Rework UI (again) (#10)
Co-authored-by: carvaq <shoesforbreakfast@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ material = { module = "com.google.android.material:material", version = "1.12.0"
 
 activity = { module = "androidx.activity:activity-compose", version = "1.10.1" }
 appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version = "0.37.3" }
 
 lifecycle-extensions = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "lifecycleExtensions" }
 
@@ -43,6 +44,7 @@ mockk = { module = "io.mockk:mockk", version = "1.14.4" }
 android-junit = { module = "androidx.test.ext:junit-ktx", version = "1.2.1" }
 junit = { module = "junit:junit", version = "4.13.2" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+roblectric = { module = "org.robolectric:robolectric", version = "4.15.1" }
 
 [plugins]
 android-application = { id = "com.android.application", version = "8.11.0" }
